@@ -5,7 +5,6 @@ import com.terraforming.ares.model.Player;
 import com.terraforming.ares.model.StateContext;
 import com.terraforming.ares.model.turn.TurnType;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,10 +24,15 @@ public class BuildGreenProjectsState extends AbstractState {
 
         if (player.getNextTurn() != null && stateContext.getTurnTypeService().isIntermediate(player.getNextTurn().getType())) {
             return List.of(player.getNextTurn().getType());
-        } else if (player.getNextTurn() != null || player.getCanBuildInFirstPhase() == 0) {
+        } else if (player.getNextTurn() != null) {
             return Collections.emptyList();
+        } else if (player.getCanBuildInFirstPhase() == 0) {
+            if (player.isUnmiCorporation() && player.isHasUnmiAction()) {
+                return List.of(TurnType.UNMI_RT, TurnType.SKIP_TURN);
+            }
+            return List.of();
         } else {
-            return Arrays.asList(
+            return List.of(
                     TurnType.BUILD_GREEN_PROJECT,
                     TurnType.SELL_CARDS,
                     TurnType.SKIP_TURN
@@ -39,7 +43,9 @@ public class BuildGreenProjectsState extends AbstractState {
     @Override
     public void updateState() {
         if (marsGame.getPlayerUuidToPlayer().values().stream().allMatch(
-                player -> player.getCanBuildInFirstPhase() == 0 && player.getNextTurn() == null
+                player -> player.getCanBuildInFirstPhase() == 0
+                        && player.getNextTurn() == null
+                        && !player.isHasUnmiAction()
         )) {
             performStateTransferFromPhase(2);
         }
